Fix date on IOS

--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@
 
 .header {
     width: 100%;
-    height: 5rem;
+    height: 4rem;
     display: flex;
     justify-content: start;
     align-items: center;
     padding: 1rem 2rem;
     background-color: #2d3639;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -111,6 +111,7 @@ input [type="date"] {
     .header {
         width: 100%;
         height: 6rem;
+        padding: 1rem;
     }
 
     .header p {
